monticore-generator/src/test/resources/cocos/invalid/A4012/A4012b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4012;

grammar A4012b {

  abstract A astextends B, C;

}
